--- a/users/templates/registration/edit_profile.html
+++ b/users/templates/registration/edit_profile.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 
-{% block title %} Edit Profile {% endblock %}
+{% block title %} Edit Settings {% endblock %}
 
 {% block content %}
 
 <div class="container mt-4">
-    <h1 class="text-center">Profile Update</h1>
+    <h1 class="text-center">Edit Settings</h1>
 
     <div class="row justify-content-center">
         <div class="col-md-6">
