--- a/listings/templates/base.html
+++ b/listings/templates/base.html
@@ -60,8 +60,14 @@
                             Settings
                         </a>
                         <ul class="dropdown-menu">
+
+                            {% if user.userprofile.id %}
                             <li> <a class="dropdown-item" href="{% url 'user_profile' user.userprofile.id %}">Profile</a>
                             <li> <a class="dropdown-item" href="{% url 'edit_profile_details' user.userprofile.id %}">Edit Profile</a> </li>
+                            {% else %}
+                            <li> <a class="dropdown-item" href="{% url 'create_profile_details' %}">Create Profile</a> </li>
+                            {% endif %}
+
                             <li> <a class="dropdown-item" href="{% url 'edit_profile' %}">Edit Settings</a> </li>
                             <li> <a class="dropdown-item" href="{% url 'password' %}">Change Password</a> </li>
                             <div class="dropdown-divider"></div>
