--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -12,7 +12,12 @@
             <form action="" method="post">
                 {% csrf_token %}
 
-                {{ form.as_p }}
+                <label class="form-label">Username</label>
+                <input type="text" class="form-control" name="username">
+
+                <label class="form-label">Password</label>
+                <input type="password" class="form-control" name="password">
+                <br><br>
 
                 <button type="submit" class="btn btn-primary">Login</button>
             </form>
