basic functionality finished

--- a/listings/templates/base.html
+++ b/listings/templates/base.html
@@ -55,9 +55,9 @@
                 <ul class="navbar-nav ml-auto">
                     {% if user.is_authenticated %}
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="{% url 'home' %}" role="button" data-bs-toggle="dropdown"
+                        <a class="nav-link dropdown-toggle" href="!#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
-                            Settings
+                            {{ user.username }}
                         </a>
                         <ul class="dropdown-menu">
 
