--- a/listings/templates/base.html
+++ b/listings/templates/base.html
@@ -96,11 +96,41 @@
 
     <br><br>
 
-    <footer class="bg-dark text-light text-center py-3">
+    <footer class="bg-dark text-light py-3">
         <div class="container">
-            <p>&copy; 2024 MumiakGuides. All rights reserved.</p>
+            <div class="row">
+                <div class="col-md-4">
+                    <h4>ADDITIONAL INFORMATION</h4>
+                    <br>
+                    <p>About Us</p>
+                    <p>Terms of Service</p>
+                    <p>Privacy Policy</p>
+                </div>
+
+                <div class="col-md-4">
+                    <h4>CONTACT</h4>
+                    <br>
+                    <p>Email: email@email.com</p>
+                    <p>Mobile no: +(111)111-111111</p>
+                    <p>Address: address</p>
+                </div>
+
+                <div class="col-md-4">
+                    <h4>SOCIAL MEDIA</h4>
+                    <br>
+                    <p>Twitter</p>
+                    <p>GitHub</p>
+                    <p>Telegram</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <p class="mt-3 text-center">&copy; 2024 MumiakGuides. All rights reserved.</p>
+                </div>
+            </div>
         </div>
-    </footer>
+    </footer>    
+    
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
